# GENMO_IMU

./: .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
configs/: __init__.py  demo.yaml  train.yaml
configs/diffusion/: ddim.yaml
configs/endecoder/: v1_smpl_amass_bedlam.yaml
configs/exp/: gem_imu.yaml  gem_imu_lw_rp_h.yaml  gem_imu_lw_rp_h_regression.yaml  gem_imu_regression.yaml  gem_imuposer_toy.yaml  gem_smpl.yaml  gem_smpl_regression.yaml
configs/hydra/: default.yaml
configs/model/: gem.yaml
configs/network/: diffusion.yaml  diffusion_imu_sm.yaml  diffusion_lg.yaml  mask_diffusion.yaml
configs/pipeline/: dual_mode.yaml  dual_mode_imu.yaml  regression_only.yaml  regression_only_imu.yaml
configs/scheduler/: epoch_half_200_350.yaml  epoch_half_500_750.yaml  iters_half_30k_50k.yaml  iters_half_70k_100k.yaml
configs/test_datasets/: 3dpw_fliptest.yaml  3dpw_occ_fliptest.yaml  amass_imu_lw_rp_h_val.yaml  amass_imu_val.yaml  emdb1_v1_fliptest.yaml  emdb2_v1_fliptest.yaml  humanml3d_eval.yaml  rich_all.yaml
configs/text_encoder/: t5_3b.yaml
configs/train_datasets/: 3dpw_occ_v1.yaml  3dpw_v1.yaml  aistpp_train.yaml  amass_imu.yaml  amass_imu_lw_rp_h.yaml  amass_v11.yaml  beat2_static_train.yaml  bedlam_v2.yaml  h36m_v1.yaml  humanml3d_static_train.yaml  imuposer_toy_train.yaml
docs/: DATA.md  FAQ.md  INSTALL.md
gem/: __init__.py  gem.py
gem/network/: utils.py  (+5 more)
scripts/: install_env.sh  preprocess_amass_imu_cache.py  slurm_init.sh  slurm_job.sh  sync_osmo.sh  train.py
tools/: docker-entrypoint.sh  upload_onnx_to_hf.py
(+129 files in other folders)
