[metadata]
name = gem
version = 0.1.0
description = GEM: A Generalist Model for Human Motion
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    torch>=2.5.0
    torchvision>=0.20.0
    timm==0.6.7
    lightning==2.3.0
    hydra-core==1.3
    hydra-zen
    hydra-colorlog
    rich
    numpy==1.23.5
    setuptools>=68.0
    opencv-python
    ffmpeg-python
    scikit-image
    termcolor
    einops
    imageio==2.34.1
    av<14
    joblib
    trimesh
    open3d
    ultralytics==8.3.50
    yacs
    smplx
    tqdm
    scipy
    pillow
    wandb
    sentencepiece
    transformers
    huggingface_hub

[options.extras_require]
train =
    tensorboardX
dev =
    pytest
    ruff
    pre-commit
    black

[options.packages.find]
include =
    gem
    gem.*
    tools
